Migrate odlext-parser-support to JUnit5
Migrated all tests to use JUnit5 Assertions, using
openrewrite:rewrite-testing-frameworks. Also modernize the tests a bit
and remove unnecessary initialization.

JIRA: YANGTOOLS-1521
Change-Id: Ibedf49de7440857c66393db20ec7f1fe6d0a0429
Signed-off-by: matus.matok <matus.matok@pantheon.tech>
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>